<resources>
    <string name="app_name">Safe Zone</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">welcome</string>
    <string name="map_fragment_label">map</string>
    <string name="control_fragment_label">control</string>

    #bottons
    <string name="send">Send</string>
    <string name="previous">Previous</string>
    <string name="show_map">Show map</string>
    <string name="manage_warriors">Manage Warriors</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_in">Sign in</string>
    <string name="emergency_button">Emergency</string>
    <string name="call_control">Call control</string>
    <string name="watch_messages">Watch messages</string>
    <string name="cancel_emergency">cancel emergency</string>
    <string name="send_alert"> Send Alert</string>

    #texts
    <string name="welcome_to_control_screen">Welcome to control screen</string>
    <string name="password_text">Password</string>
    <string name="username_text">Username</string>
    <string name="welcome">Welcome to your safe zone</string>
    <string name="type_a_message">Type a message</string>
    <string name="messages_updates_title">messages:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_team">To create your safe zone, please fill the following details:</string>
    <string name="enter_manager_details">Enter Manager Details</string>
    <string name="create">Create</string>
    <string name="create_a_new_team">create a new team</string>
    <string name="add_member">add a new member</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="Address_text">Address</string>
    <string name="Special_role_text">Role</string>
    <string name="set_a_meeting">set a meeting</string>


</resources>