<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ControlFragment"
    android:background="@color/khaki">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_control_screen"
        android:textSize="24sp"
        android:textColor="@color/dark_green"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="24dp" />

    <Button
        android:id="@+id/btn_map"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/show_map"
        android:backgroundTint="@color/dark_green"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btn_manage_warriors"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/dark_green"
        android:text="@string/manage_warriors" />
    <Button
        android:id="@+id/set_a_meeting"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/dark_green"
        android:text="@string/set_a_meeting" />

    <Button
        android:id="@+id/sendAlertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/dark_green"
        android:text="@string/send_alert"
        />


</LinearLayout>
