<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.myapplication.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first" >

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/MapFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_ControlFragment"
            app:destination="@id/ControlFragment" />
    </fragment>
    <fragment
        android:id="@+id/MapFragment"
        android:name="com.example.myapplication.MapFragment"
        android:label="@string/map_fragment_label"
        tools:layout="@layout/fragment_map" >

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/ControlFragment"
        android:name="com.example.myapplication.ControlFragment"
        android:label="@string/control_fragment_label"
        tools:layout="@layout/fragment_control" >
        <action
            android:id="@+id/action_ControlFragment_to_MapFragment"
            app:destination="@id/MapFragment" />
    </fragment>
</navigation>