<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapFragment"
    android:background="@color/khaki">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <WebView
            android:id="@+id/mapview"
            android:layout_width="match_parent"
            android:layout_height="650dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@id/button_emergency"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_emergency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emergency_button"
            android:backgroundTint="#102820"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/buttonPhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mapview" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonMessages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/watch_messages"
            app:backgroundTint="@color/hunter_green"
            app:srcCompat="@android:drawable/ic_dialog_email"
            app:tint="@color/khaki"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mapview"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/buttonPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/call_control"
            app:backgroundTint="@color/hunter_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mapview"
            app:layout_constraintStart_toEndOf="@id/buttonMessages"
            app:srcCompat="@android:drawable/stat_sys_phone_call"
            app:tint="@color/khaki" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
